Hours and hours of fighting with v8 crashes when i call v8::ThrowException() in certain contexts. Still not working how i want, but isn't crashing, i think.

--- a/wiki/PluginCurl.wiki
+++ b/wiki/PluginCurl.wiki
@@ -83,6 +83,7 @@ counterparts (which are documented
 || `string range` || `CURLOPT_RANGE` || ||
 || `int resumeFrom` || `CURLOPT_RESUME_FROM` || ||
 || `int maxRedirs` || `CURLOPT_MAXREDIRS` || ||
+|| `bool post` || `CURLOPT_POST` || ||
 || `StringArray quote` || `CURLOPT_QUOTE` || ||
 || `int timeout` || `CURLOPT_TIMEOUT` || ||
 || `int timeoutMS` || `CURLOPT_TIMEOUT_MS` || ||
