Added CURLOPT_READFUNC support.

--- a/wiki/PluginCurl.wiki
+++ b/wiki/PluginCurl.wiki
@@ -19,10 +19,11 @@ synchronously.
 
 == WARNINGS ==
 
-*Do not try to use this API to load binary data.* It is not possible
-to pass binary data to JS without the overhead of transporting the
+*Do not try to use this API to handle binary data.* It is not possible
+to pass binary data around in v8 without the overhead of transporting the
 data from C++ to JS as an Array of integers, which would have a _huge_
-memory cost (somewhere around 100 times the size of the input data).
+memory cost (somewhere around 50 times the size of the input data, i.e.
+10k of input would require roughly 500kb of memory).
 
 When a v8 string is created and it contains any "high bits" (anything
 non-ASCII), v8 assumes UC16 format and will try to convert it
@@ -92,6 +93,8 @@ counterparts (which are documented
 || `string proxy` || `CURLOPT_PROXY` || ||
 || `int proxyPort` || `CURLOPT_PROXYPORT` || ||
 || `string range` || `CURLOPT_RANGE` || ||
+|| `any readData` || `CURLOPT_READDATA` || Passed as last argument to `readFunction()` ||
+|| `function readFunction(readLength,userData)` || `CURLOPT_READFUNCTION` || See below. ||
 || `int resumeFrom` || `CURLOPT_RESUME_FROM` || ||
 || `int maxRedirs` || `CURLOPT_MAXREDIRS` || ||
 || `bool post` || `CURLOPT_POST` || ||
@@ -117,9 +120,11 @@ The curl API contains many constant values which used as:
   * Connection information codes (`CURLINFO_xxx`)
   * A few other miscellaneous things (e.g. the special-purpose return value `CURL_READFUNC_PAUSE`).
 
-All such constants are available in the JS API by replacing the `CURL` prefix with `Curl.`. e.g. `CURLE_OK` becomes `Curl.E_OK` and `CURLOPT_VERBOSE` becomes `Curl.OPT_VERBOSE`. The majority of the `CURLOPT_xxx`, `CURLINFO_xxx` and `CURLE_xxx` constants are available in JS.
+All such constants which are supported by the JS API are available by replacing the `CURL` prefix with `Curl.`. e.g. `CURLE_OK` becomes `Curl.E_OK` and `CURLOPT_VERBOSE` becomes `Curl.OPT_VERBOSE`. The majority (about 200!) of the `CURLOPT_xxx`, `CURLINFO_xxx` and `CURLE_xxx` constants are available in JS.
 
 == Callback routines ==
+
+=== Reading `GET` Data from Curl ===
 
 The `headerFunction()` and `writeFunction()` properties are functions
 which are called when a response header or body chunk have been
@@ -143,6 +148,101 @@ v8's string conversion routines (or it _might_ actually be a legal v8
 string).
 
 When the `headerFunction()` is called, it is passed a single header line (a complete header entry), but that line has a trailing `\r\n` on it, which should be stripped by the caller. It is not stripped by the wrapper because doing so would cause confusion with the `length` parameter (and we do not adjust to account for the two extra stripped characters that because it would falsify any byte count calculations done by the client).
+
+=== Writing `POST` Data via Curl ===
+
+When curl is told to send data to a server, e.g. by using `setOpt(Curl.OPT_POST,true)`, curl uses a callback
+function to fetch the data from the user. The JS callback has, due to differences in C++ and JS calling conventions,
+a different signature than the native callback function:
+
+{{{
+function readerCallback( int bytes, any userData );
+}}}
+
+The first argument is the number of bytes which curl would like to have. The second is the value of
+the `Curl.OPT_READDATA` option (e.g. set via `setOpt(Curl.OPT_READDATA,...)`). The function must
+return one of:
+
+  * An empty string to signal the end of the input.
+  * Throw an exception to abort the sending process prematurely.
+  * On success, a string value with the same length as the first argument passed to the callback (count in _bytes_, not _characters_).
+
+It is important to stop producing data once curl has requested
+`Content-Length` (e.g., set via `setOpt(Curl.OPT_HTTPHEADER,...)`)
+bytes.  This is because curl will read until the callback either
+throws or returns a value smaller than the first parameter passed to
+the callback.
+
+_Encoding of the data is left to the user._ i have absolutely no experience with posting data this way, and
+can say nothing more on the topic!
+
+Here's a trivial, largely nonsensical example:
+
+{{{
+var c = new Curl();
+var content = "";
+for( var i = 0; i < 20000; ++i )
+{
+    content += '*';
+}
+c.setOpt({
+        url:'http://wh',
+        verbose:true,
+        post:true,
+        httpHeader:['Content-Length: '+content.length],
+        readFunction:function(len,ud)
+        {
+            if( ud.pos >= ud.max ) return "";
+            var clen = ud.length - ud.pos;
+            var xlen = (len > clen) ? clen : len;
+            var s = ud.content.substr( ud.pos, xlen );
+            print("readFunction(",len,") sending",s.length,'bytes.');
+            ud.pos += xlen;
+            return s;
+        },
+        readData:{
+            pos:0,
+            content:content
+        }
+    });
+var rc = c.easyPerform();
+c.destroy();
+}}}
+
+That produces output similar to:
+
+{{{
+* About to connect() to localhost port 80 (#0)
+*   Trying 127.0.0.1... * connected
+* Connected to localhost (127.0.0.1) port 80 (#0)
+> POST / HTTP/1.1
+Host: localhost
+Accept: */*
+Accept-Encoding: deflate, gzip
+Content-Length: 20000
+Content-Type: application/x-www-form-urlencoded
+
+readFunction( 16384 ) sending 16384 bytes.
+readFunction( 16384 ) sending 3616 bytes.
+readFunction( 16384 ) sending 0 bytes.
+< HTTP/1.1 200 OK
+< Date: Fri, 20 Nov 2009 20:15:07 GMT
+< Server: Apache/2.2.12 (Ubuntu)
+< X-Powered-By: PHP/5.2.10-2ubuntu6.1
+< Set-Cookie: PHPSESSID=1ce8cb3dacb9d6619991832e9f3c2179; path=/
+< Expires: Thu, 19 Nov 1981 08:52:00 GMT
+< Cache-Control: no-store, no-cache, must-revalidate, post-check=0, pre-check=0
+< Pragma: no-cache
+< Vary: Accept-Encoding
+< Content-Encoding: gzip
+< Content-Length: 1912
+< Content-Type: text/html
+< 
+* Connection #0 to host localhost left intact
+* Closing connection #0
+}}}
+
+(The lines starting with `*` or `<` appear because the `verbose` option is set to true.)
 
 == Setting Curl Options ==
 
@@ -192,7 +292,7 @@ value is set.
 and allows one to fetch various connection-related information.
 
 It accepts a single integer parameter corresponding to one of the
-`CURLINFO_xxx` arguments listed below (but names `Curl.INFO_xxx` in
+`CURLINFO_xxx` arguments listed below (but named `Curl.INFO_xxx` in
 this API). If `getInfo()` fails (passed an unknown value, or because
 the underlying call to `curl_easy_getinfo()` fails) then it throws an
 exception, otherwise it returns an different type depending on the
@@ -364,4 +464,4 @@ c.easyPerform() rc = 0
 = TODOs =
 
   * Add `CURLOPT_READFUNCTION` and friends.
-  * Give some thought to how we might bind the "curl multi" interface, which apparently allows asynchronous communication.
+  * Give some thought to how we might bind the curl "multi" interface, which apparently allows asynchronous communication.
